# halfmill

./: .env.example  .gitignore  docker-compose.yml
backend/: Cargo.toml
backend/halfmill-api/: Cargo.toml
backend/halfmill-api/src/: app_state.rs  extractors.rs  jobs.rs  lib.rs  middleware.rs  user.rs
backend/halfmill-api/src/auth/: constant.rs  controller.rs  dtos.rs  mod.rs  service.rs
backend/halfmill-api/src/script/: controller.rs  dtos.rs  mod.rs  services.rs
backend/halfmill-api/src/users/: controller.rs  dtos.rs  mod.rs  services.rs
backend/halfmill-common/: Cargo.toml
backend/halfmill-common/src/: error.rs  lib.rs  password_utils.rs  scripts.rs
backend/halfmill-common/src/config/: error.rs  mod.rs
backend/halfmill-common/src/database/: mod.rs  user.rs
backend/halfmill-common/src/model/: user.rs
backend/halfmill-common/src/utils/: jwt.rs  mod.rs  password.rs
backend/halfmill-queue/: Cargo.toml
backend/halfmill-server/: Cargo.toml
backend/halfmill-server/src/: main.rs
backend/halfmill-worker/: Cargo.toml
backend/halfmill-worker/src/: lib.rs
backend/halfmill-worker/src/jobs/: mod.rs
backend/migrations/: 20241005133756_user_table.down.sql  20241005133756_user_table.up.sql  20241016193713_scripts_table.down.sql  20241016193713_scripts_table.up.sql
frontend/: package.json  pnpm-lock.yaml
frontend/src/: hooks.server.ts
frontend/src/lib/: cookieParser.ts  fetchWrapper.ts  index.ts  monaco_editor.ts  routes.ts
frontend/src/routes/: +layout.svelte  +page.server.ts  +page.svelte
frontend/src/routes/auth/login/: +page.server.ts  +page.svelte
frontend/src/routes/auth/signup/: +page.server.ts  +page.svelte
