[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.89"
axum = "0.7.6"
mio = "1.0.2"
serde = "1.0.210"
thiserror = "1.0.64"
tokio = { version = "1.40.0", features = ["full"] }
sqlx = { version = "0.8.0", features = [
    "macros",
    "migrate",
    "uuid",
    "json",
    "chrono",
    "postgres",
    "runtime-tokio-rustls",
    "bigdecimal"
] }