[workspace]
members = [ "halfmill-api", "halfmill-common",  "halfmill-queue","halfmill-server", "halfmill-worker"]

resolver = "2"


[workspace.package]
version = "0.1.0"
authors = ["Dieri"]
edition = "2021"


[workspace.dependencies]
halfmill-api = { path = "./halfmill-api" }
halfmill-queue = { path = "./halfmill-queue" }
halfmill-worker = { path = "./halfmill-worker" }
halfmill-common = { path = "./halfmill-common" }
dotenvy = "0.15.7"
tracing = "0.1"
axum = { version = "^0.7", features = ["multipart", "macros"] }
headers = "^0"
hyper = { version = "^1", features = ["full"] }
tokio = { version = "^1", features = ["full", "tracing"] }
serde = "^1"
serde_json = { version = "^1", features = ["preserve_order", "raw_value"] }
thiserror = "^1"
anyhow = "^1"
sqlx = { version = "0.8.0", features = [
    "macros",
    "migrate",
    "uuid",
    "json",
    "chrono",
    "postgres",
    "runtime-tokio-rustls",
    "bigdecimal"
] }
tracing-subscriber = { version = "0.3" }
tower = { version = "0.5.1", features = ["full"] }
tower-http = { version = "^0.6", features = ["full"] }
reqwest = { version = "^0.12", features = ["json", "stream", "gzip"] }
cron = "^0"
chrono = "0.4.38"
validator = { version = "0.18.1", features = ["derive"] }
async-trait = "0.1.83"
argon2 = "0.5.3"