[package]
name = "halfmill-api"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
halfmill-queue.workspace = true
halfmill-worker.workspace = true
halfmill-common.workspace = true
anyhow.workspace = true
axum.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
tracing.workspace = true
validator.workspace = true
serde.workspace = true
async-trait.workspace = true
thiserror.workspace = true