[package]
name = "halfmill-server"
version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
anyhow.workspace = true
halfmill-common.workspace = true
dotenvy.workspace = true
halfmill-api.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true